--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,7 @@
 PORT=3000
-MONGO_URI='mongodb+srv://pm618209:88JEKZ1LrinB2p95@instagram.fcgpe.mongodb.net/?retryWrites=true&w=majority&appName=Instagram
-'
+MONGO_URI='mongodb+srv://pm618209:88JEKZ1LrinB2p95@instagram.fcgpe.mongodb.net/?retryWrites=true&w=majority&appName=Instagram'
+SECRET_KEY="ljflsajrw33r2p345-059-059-4359-3459-3=-=-3"
+
+API_KEY=353415978628172
+API_SECRET=pniomLyEKDYRkX6z8qNvkI8xxYw
+CLOUD_NAME=dnyhe1zei
