Redux toolkit setup

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=3000
-MONGO_URI='mongodb+srv://pm618209:88JEKZ1LrinB2p95@instagram.fcgpe.mongodb.net/?retryWrites=true&w=majority&appName=Instagram'
+DATABASE_URL='mongodb+srv://pm618209:88JEKZ1LrinB2p95@instagram.fcgpe.mongodb.net/?retryWrites=true&w=majority&appName=Instagram'
 SECRET_KEY="ljflsajrw33r2p345-059-059-4359-3459-3=-=-3"
 
 API_KEY=353415978628172
