--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,27 +57,30 @@ jobs:
           file: ./forntend/Dockerfile
           push: true
           tags: ${{ env.FRONTEND_IMAGE }}
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
 
-      - name: Deploy via SSH and Docker Compose
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          port: ${{ secrets.SERVER_PORT }}
-          script: |
-            set -e
-            echo "🔍 Debug: Connected to server successfully"
-            cd /home/ubuntu/instagram-clone || exit 1
-            echo "📦 Pulling latest Docker images..."
-            docker-compose pull
-            echo "🚀 Starting services..."
-            docker-compose up -d --remove-orphans
-            echo "✅ Deployment completed"
+          
+      - name: Deploy to server
+        deploy:
+          runs-on: ubuntu-latest
+
+          steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
+
+            - name: Deploy via SSH and Docker Compose
+              uses: appleboy/ssh-action@v1.0.3
+              with:
+                host: ${{ secrets.SERVER_HOST }}
+                username: ${{ secrets.SERVER_USER }}
+                key: ${{ secrets.SERVER_SSH_KEY }}
+                port: ${{ secrets.SERVER_PORT }}
+                script: |
+                  set -e
+                  echo "🔍 Debug: Connected to server successfully"
+                  cd /home/ubuntu/instagram-clone || exit 1
+                  echo "📦 Pulling latest Docker images..."
+                  docker-compose pull
+                  echo "🚀 Starting services..."
+                  docker-compose up -d --remove-orphans
+                  echo "✅ Deployment completed"
